--- a/Project1.IO/Project1.IO.csproj
+++ b/Project1.IO/Project1.IO.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Project1.Logic\Project1.Logic.csproj" />
+  </ItemGroup>
+
 </Project>
